refactor langfuse trace correlation and agentic observations

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@
 # 日志级别：debug | info | warn | error（默认 info）
 # LOG_LEVEL=info
 
+# 是否打印完整 chat 请求 payload（默认 false，仅排障时开启）
+# LOG_CHAT_PAYLOAD=false
+
 # 可选：限制访问代理的 API Key
 # 设置后客户端须在 Authorization: Bearer <key> 中提供此值
 # 不设置则不校验
